--- a/app/sass/pages/_basket_page.scss
+++ b/app/sass/pages/_basket_page.scss
@@ -4,9 +4,9 @@
   }
 }
 .container-basket {
-  padding: 64px 24px 42px 24px;
+  padding: 64px 0 42px 0;
   @media screen and (min-width: $tablet-bp) {
-    padding: 80px 14px 62px 14px;
+    padding: 80px 40px 62px 14px;
   }
 }
 .basket-head {
@@ -26,28 +26,64 @@
   font-size: 14px;
   line-height: 18px;
   color: $averagegray;
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
 }
 .basket-row {
   display: flex;
   flex-direction: column;
+  @media screen and (min-width: $tablet-bp) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
-.basket-column {
+.basket-column--basket-item {
+  margin-bottom: 32px;
+  @media screen and (min-width: $tablet-bp) {
+    flex-basis: 60%;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: 33.33%;
+  }
 }
+.basket-column--promocode {
+  @media screen and (min-width: $tablet-bp) {
+    flex-basis: 40%;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: 33.33%;
+  }
+}
+.basket-column--info {
+  position: relative;
+  margin-bottom: 32px;
+  @media screen and (min-width: 1200px) {
+    flex-basis: 33.33%;
+  }
+}
+
 .basket-product-item-wrapper {
   padding-top: 24px;
   padding-bottom: 30px;
   border-top: 1px solid $neutral;
 }
+.container--basket-product-item {
+  @media screen and (min-width: 1200px) {
+    padding: 0 24px;
+  }
+}
 .basket-product-item {
   position: relative;
   display: flex;
   min-width: 0;
-  @media screen and (min-width: 700px) {
-    justify-content: center;
+  @media screen and (min-width: $tablet-bp) {
+    justify-content: flex-start;
   }
 }
 .basket-product-item-img {
   margin-right: 24px;
+  flex: 0 0 auto;
   img {
     display: block;
     max-width: 104px;
@@ -64,9 +100,7 @@
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 10px;
-  max-width: 182px;
-  // @TODO fix
-  padding-right: 10px;
+  padding-right: 15px;
 }
 .basket-product-item-size-block {
   margin-bottom: 10px;
@@ -99,7 +133,7 @@
 }
 .basket-product-item-cost-wrapper {
   display: inline-block;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.4;
   white-space: nowrap;
   span {
@@ -165,4 +199,186 @@
 .btn-delete-basket-item-icon {
   width: 10px;
   height: 10px;
+}
+.basket-promocode-block-wrapper {
+  margin-bottom: 32px;
+}
+.basket-promocode-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media screen and (min-width: $tablet-bp) {
+    align-items: flex-end;
+  }
+  @media screen and (min-width: 1200px) {
+    align-items: center;
+  }
+}
+
+.basket-promocode-form {
+  width: 100%;
+  max-width: 310px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  @media screen and (min-width: $tablet-bp) {
+  }
+  @media screen and (min-width: 1200px) {
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    align-items: center;
+    padding: 16px 22px 26px 22px;
+    margin-bottom: 22px;
+    width: 100%;
+    max-width: 100%;
+  }
+}
+.basket-promocode-form-title {
+  display: none;
+  width: 100%;
+  font-size: 14px;
+  line-height: 32px;
+  font-weight: normal;
+  font-family: $subfamily;
+  margin-bottom: 4px;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
+.base-input-wrapper-promocode {
+  display: flex;
+  width: 100%;
+  align-items: flex-start;
+}
+.btn-promocode-block {
+  width: 100%;
+  max-width: 310px;
+  margin-bottom: 12px;
+  &:last-of-type {
+    margin-bottom: 16px;
+  }
+}
+.btn-gray--btn-promocode-block {
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+}
+.basket-promocode-form--hide {
+  display: none;
+  @media screen and (min-width: $tablet-bp) {
+    display: flex;
+  }
+}
+.btn-promocode-block--hide {
+  display: none;
+}
+.btn-promocode-block-icon {
+  width: 6px;
+  height: 12px;
+  margin-left: 12px;
+}
+.btn-base-promocode {
+  flex: 0 0 auto;
+  font-size: 14px;
+  line-height: 32px;
+  color: $black;
+  padding: 8px 12px;
+  font-family: $subfamily;
+  border: 1px solid $lightgray;
+}
+.basket-promocode-block-link {
+  font-family: $subfamily;
+  font-size: 16px;
+  line-height: 32px;
+  color: $gray;
+  align-self: center;
+  &:hover {
+    color: $gray;
+  }
+}
+
+.base-input-wrapper-promocode-form {
+  flex-grow: 1;
+  padding-bottom: 24px;
+  min-width: 0;
+}
+.base-input--promocode {
+  width: 100%;
+}
+
+.product-recommend-title--basket {
+  padding: 0 24px;
+  margin-bottom: 12px;
+}
+.product-recommend-slider--basket {
+  padding: 0 0 0 19px;
+}
+.basket-info {
+  padding: 40px 0;
+  margin: 0 12px 24px 12px;
+  background-repeat: no-repeat;
+  background-position: left 4px top 12px;
+  background-size: 18px 18px;
+  background-image: url("data:image/svg+xml,%3Csvg fill='none' height='20' viewBox='0 0 20 20' width='20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m10 0c-5.52 0-10 4.48-10 10s4.48 10 10 10 10-4.48 10-10-4.48-10-10-10zm1 15h-2v-6h2zm0-8h-2v-2h2z' fill='%23bdbdbd'/%3E%3C/svg%3E");
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  @media screen and (min-width: $tablet-bp) {
+    margin: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    margin: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-size: 20px 20px;
+    background-position: left 12px top 12px;
+  }
+}
+.basket-promocode-form-cost-block {
+  display: none;
+  width: 100%;
+  @media screen and (min-width: $tablet-bp) {
+    display: block;
+  }
+}
+.basket-promocode-form-cost {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 14px;
+  line-height: 32px;
+  font-family: $subfamily;
+  margin-bottom: 30px;
+}
+.basket-promocode-form-text {
+  display: none;
+  font-size: 12px;
+  line-height: 20px;
+  font-family: $subfamily;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
+
+.popup-content--basket {
+  background-color: $white;
+  padding-top: 10px;
+  @media screen and (min-width: $tablet-bp) {
+    max-width: 640px;
+    bottom: auto;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px 60px 0px 30px;
+  }
+}
+.popup-tabs-btn-wrapper--basket {
+  padding: 0 20px;
+  @media screen and (min-width: $tablet-bp) {
+    padding: 0 40px;
+  }
+}
+.btn-popup-close--basket {
+  @media screen and (min-width: $tablet-bp) {
+    right: 30px;
+    top: 30px;
+  }
 }
