--- a/app/sass/pages/_catalog_page.scss
+++ b/app/sass/pages/_catalog_page.scss
@@ -117,7 +117,10 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .product-recommend-item-img-catalog--first {
   z-index: 1;
