--- a/app/sass/ui/_input.scss
+++ b/app/sass/ui/_input.scss
@@ -124,6 +124,7 @@
   position: relative;
   display: block;
   padding: 0 0 0 36px;
+  cursor: pointer;
 }
 .btn-radio-icon {
   position: absolute;
