--- a/app/sass/ui/_input.scss
+++ b/app/sass/ui/_input.scss
@@ -75,6 +75,7 @@
   }
 }
 .custom-checkbox-check {
+  flex: 0 0 auto;
   position: relative;
   display: block;
   width: 16px;
@@ -108,7 +109,11 @@
   font-size: 16px;
   line-height: 24px;
 }
-
+.custom-checkbox-text--footer {
+  white-space: normal;
+  font-size: 14px;
+  line-height: 18px;
+}
 .btn-radio {
   @extend .visually-hidden;
   &:checked + .btn-radio-label {
