fix grid + slider

--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -73,3 +73,10 @@ $laptop-bg: 1366px;
     fill: currentColor;
   }
 }
+.clearfix {
+  &::after {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
