--- a/app/sass/pages/_main_page.scss
+++ b/app/sass/pages/_main_page.scss
@@ -105,7 +105,7 @@
   }
 }
 .mp-page-column--slider {
-  padding: 28px 0 48px 15px;
+  padding: 28px 15px 48px 15px;
   position: relative;
   @media screen and (min-width: $tablet-bp) {
     height: 400px;
