--- a/app/sass/pages/_product_page.scss
+++ b/app/sass/pages/_product_page.scss
@@ -13,15 +13,17 @@
 
 .product-wrapper {
   @media screen and (min-width: $tablet-bp) {
-    display: flex;
-    max-width: 1360px;
-    margin: 0 auto;
+    // display: flex;
+    // max-width: 1360px;
+    // margin: 0 auto;
   }
 }
 .product-gallery {
   @media screen and (min-width: $tablet-bp) {
-    flex-basis: 66.66%;
-    min-width: 0;
+    // flex-basis: 66.66%;
+    // min-width: 0;
+    width: 66.66%;
+    float: left;
   }
 }
 .product-about-wrapper {
@@ -29,15 +31,17 @@
   margin-bottom: 34px;
   padding: 0;
   @media screen and (min-width: $tablet-bp) {
-    flex-basis: 33.33%;
+    // flex-basis: 33.33%;
+    width: 33.33%;
+    float: right;
   }
 }
 .product-about {
   @media screen and (min-width: $tablet-bp) {
     width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
+    // position: absolute;
+    // left: 0;
+    // top: 0;
     display: flex;
     flex-direction: column-reverse;
     justify-content: flex-end;
@@ -423,13 +427,15 @@
 .product-recommend {
   margin-bottom: 40px;
   @media screen and (min-width: $tablet-bp) {
-    max-width: 66.6%;
+    // max-width: 66.6%;
   }
 }
 .container--product-recommend {
-  padding: 0 0 0 19px;
+  padding: 0 20px;
   @media screen and (min-width: $tablet-bp) {
     padding: 0 0 0 35px;
+    width: 66.6%;
+    float: left;
   }
 }
 .product-recommend-title {
@@ -451,9 +457,11 @@
 }
 .product-recommend-item-img {
   margin-bottom: 22px;
-  img {
-    display: block;
-  }
+  width: 166px;
+  height: 220px;
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
 }
 .product-recommend-item-preorder-wrapper {
   position: relative;
@@ -816,4 +824,9 @@
 }
 .base-input-wrapper--popup-fast-buy {
   margin-bottom: 32px;
+}
+.product-recommend-slider {
+  display: flex;
+  overflow-x: scroll;
+  padding-bottom: 10px;
 }
