--- a/app/sass/pages/_layout_pages.scss
+++ b/app/sass/pages/_layout_pages.scss
@@ -3,3 +3,6 @@
 @import './catalog_page';
 @import './basket_page';
 @import './order_page';
+@import './table_page';
+@import './about_page';
+@import './contacts_page';
