--- a/app/sass/pages/_table_page.scss
+++ b/app/sass/pages/_table_page.scss
@@ -7,21 +7,19 @@
 
 .table-title {
   padding: 24px 0;
-  font-family: $subfamily;
   font-style: normal;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  font-size: 22px;
   @media screen and (min-width: $tablet-bp) {
+    font-size: 45px;
   }
 }
 .table-inner-wrapper {
   overflow-x: scroll;
 }
 .table-inner {
-  @media screen and (min-width: $tablet-bp) {
-    width: 100%;
-  }
+  width: 100%;
   th {
     font-size: 16px;
     color: $black;
@@ -47,8 +45,12 @@
   padding: 32px 0;
 }
 .get-size-table-title {
-  font-size: 16px;
+  font-size: 18px;
   margin-bottom: 12px;
+  line-height: 1.2;
+  @media screen and (min-width: $tablet-bp) {
+    font-size: 16px;
+  }
 }
 .get-size-table-list {
   margin: 12px 0;
