--- a/app/sass/ui/_btns.scss
+++ b/app/sass/ui/_btns.scss
@@ -182,6 +182,7 @@ input[type='submit'] {
     color: $neutral;
     font-weight: normal;
     background-color: $averagegray;
+    cursor: default;
   }
 }
 .btn-primary--icon {
@@ -210,6 +211,11 @@ input[type='submit'] {
   &:hover,
   &:active {
     color: $gold;
+  }
+  &:disabled,
+  &.disabled {
+    opacity: 0.4;
+    cursor: default;
   }
 }
 
