--- a/app/sass/pages/_product_page.scss
+++ b/app/sass/pages/_product_page.scss
@@ -4,6 +4,12 @@
     padding: 80px 0 0 0;
   }
 }
+.scroll-parent-container {
+  padding: 0;
+  @media screen and (min-width: $tablet-bp) {
+    padding: 0 40px;
+  }
+}
 .product-page-breadcrumb {
   padding: 12px 24px;
   @media screen and (min-width: $tablet-bp) {
@@ -11,17 +17,8 @@
   }
 }
 
-.product-wrapper {
-  @media screen and (min-width: $tablet-bp) {
-    // display: flex;
-    // max-width: 1360px;
-    // margin: 0 auto;
-  }
-}
 .product-gallery {
   @media screen and (min-width: $tablet-bp) {
-    // flex-basis: 66.66%;
-    // min-width: 0;
     width: 66.66%;
     float: left;
   }
@@ -31,7 +28,6 @@
   margin-bottom: 34px;
   padding: 0;
   @media screen and (min-width: $tablet-bp) {
-    // flex-basis: 33.33%;
     width: 33.33%;
     float: right;
   }
@@ -39,9 +35,6 @@
 .product-about {
   @media screen and (min-width: $tablet-bp) {
     width: 100%;
-    // position: absolute;
-    // left: 0;
-    // top: 0;
     display: flex;
     flex-direction: column-reverse;
     justify-content: flex-end;
