--- a/app/sass/component/_footer.scss
+++ b/app/sass/component/_footer.scss
@@ -4,20 +4,19 @@
   background: url('../images/dest/img/footer-bg.png') center bottom -60px no-repeat;
   background-size: cover;
   @media screen and (min-width: $tablet-bp) {
-    background: none;
-    padding: 32px 15px;
+    background: url('../images/dest/img/footer-img.png') center;
   }
 }
-.main-footer-bg-img {
-  display: none;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  pointer-events: none;
-  @media screen and (min-width: $tablet-bp) {
-    display: block;
-  }
-}
+// .main-footer-bg-img {
+//   display: none;
+//   position: absolute;
+//   left: 0;
+//   bottom: 0;
+//   pointer-events: none;
+//   @media screen and (min-width: $tablet-bp) {
+//     display: block;
+//   }
+// }
 .main-footer-subscribe {
   margin-bottom: 48px;
   @media screen and (min-width: $tablet-bp) {
