--- a/app/sass/pages/_main_page.scss
+++ b/app/sass/pages/_main_page.scss
@@ -186,12 +186,12 @@
     padding: 84px 15px 30px 15px;
   }
   .product-gallery-slider-item {
-    width: auto;
+    width: 412px;
     height: auto;
     padding-bottom: 45%;
   }
   .product-about-description {
-    margin-top: 80px;
+    margin-top: 84px;
   }
   .product-gallery-slider .slick-dots {
     bottom: -72px;
