--- a/app/sass/pages/_product_page.scss
+++ b/app/sass/pages/_product_page.scss
@@ -53,7 +53,7 @@
   width: 100%;
   padding-top: 464px;
   @media screen and (min-width: $tablet-bp) {
-    padding-top: 68%;
+    padding-top: 576px;
     margin-bottom: 32px;
   }
 }
