--- a/app/sass/pages/_contacts_page.scss
+++ b/app/sass/pages/_contacts_page.scss
@@ -4,87 +4,74 @@
     padding: 150px 40px 70px 40px;
   }
 }
-
-.contacts-title {
-  display: block;
-  margin: 0 auto;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 1.2;
-  font-size: 22px;
-  margin-bottom: 44px;
-  text-align: center;
+.contacts-page-breadcrumb {
+  padding: 12px 0;
+  margin-bottom: 24px;
   @media screen and (min-width: $tablet-bp) {
-    max-width: 790px;
-    margin-bottom: 24px;
+    padding: 24px 0;
   }
 }
-.link-gold--text {
-  font-size: inherit;
-  color: $gold;
-  &:hover {
-    color: $gold;
+.breadcrumb-item {
+  a,
+  span {
+    font-family: $subfamily;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 1;
   }
 }
 .contacts-row {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   align-items: center;
   @media screen and (min-width: $tablet-bp) {
     flex-direction: row;
-    align-items: inherit;
+    align-items: initial;
+  }
+}
+.contacts-column {
+  @media screen and (min-width: $tablet-bp) {
+    flex-basis: 33.33%;
+    max-width: 33.33%;
+    margin: 0 24px;
   }
 }
 .contacts-item {
-  display: block;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 10px 0px;
-  padding: 30px;
-  height: 100%;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: box-shadow $base-timing $base-duration;
-  &:hover {
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 20px 0px;
-    .contacts-item-link {
-      border-color: $gold;
-    }
-  }
-}
-
-.contacts-column {
-  padding: 0 20px;
-  width: 100%;
-  max-width: 310px;
-  margin-bottom: 30px;
+  margin-bottom: 44px;
+  display: flex;
+  flex-direction: column;
   @media screen and (min-width: $tablet-bp) {
-    flex-basis: 25%;
-    max-width: 25%;
-    margin-bottom: 0;
-  }
-}
-.contacts-item-icon {
-  margin-bottom: 90px;
-  img {
-    width: 65px;
-    height: 65px;
+    height: 100%;
   }
 }
 .contacts-item-title {
-  font-size: 22px;
-  line-height: 1.35;
-  font-weight: 600;
-  color: $black;
+  display: flex;
+  align-items: center;
+  margin-bottom: 22px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 18px;
+  font-family: $subfamily;
+  img {
+    width: 32px;
+    height: auto;
+    display: block;
+    margin-right: 22px;
+  }
 }
-.contacts-item-link {
-  color: $gold;
-  font-size: 16px;
-  line-height: 1.55;
-  font-weight: 700;
-  border-bottom: 1px solid transparent;
-  transition: border-color $base-timing $base-duration;
-  &::after {
-    content: '\00a0→';
-    font-family: Arial, Helvetica, sans-serif;
+.contacts-item-text {
+  margin-bottom: 22px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  font-family: $subfamily;
+}
+
+.btn-primary--thin--contacts {
+  max-width: 320px;
+  width: 100%;
+  align-self: center;
+  @media screen and (min-width: $tablet-bp) {
+    margin-top: auto;
   }
 }
