--- a/app/sass/ui/_btns.scss
+++ b/app/sass/ui/_btns.scss
@@ -194,6 +194,24 @@ input[type='submit'] {
     max-height: 24px;
   }
 }
+.btn-primary--thin {
+  border: 1px solid $black;
+  border-radius: 4px;
+  padding: 8px 20px;
+  font-size: 16px;
+  line-height: 2;
+  color: #333333;
+  @media (hover: hover) {
+    &:hover {
+      color: $gold;
+      border-color: $gold;
+    }
+  }
+  &:active,
+  &:focus {
+    color: #333333;
+  }
+}
 .btn-basket--icon {
   width: 16px;
   height: 20px;
