--- a/app/sass/pages/_contacts_page.scss
+++ b/app/sass/pages/_contacts_page.scss
@@ -1,7 +1,7 @@
 .container-contacts {
   padding: 125px 20px 42px 20px;
   @media screen and (min-width: $tablet-bp) {
-    padding: 150px 40px 70px 40px;
+    padding: 150px 40px 110px 40px;
   }
 }
 .contacts-page-breadcrumb {
@@ -18,6 +18,9 @@
     font-size: 18px;
     font-weight: normal;
     line-height: 1;
+    @media screen and (min-width: $tablet-bp) {
+      font-size: 28px;
+    }
   }
 }
 .contacts-row {
