--- a/app/sass/pages/_delivery_page.scss
+++ b/app/sass/pages/_delivery_page.scss
@@ -67,6 +67,7 @@
   max-width: 560px;
   margin: 60px auto 0 auto;
   padding: 20px 20px 20px 20px;
+  z-index: 1;
   @media screen and (min-width: $tablet-bp) {
     margin: 60px auto;
   }
