--- a/app/sass/pages/_product_page.scss
+++ b/app/sass/pages/_product_page.scss
@@ -1026,3 +1026,11 @@
 .product-about-buy-error--show {
   display: block;
 }
+.slider-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+}
